# odoo-mcp-server

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  CUSTOMIZATIONS ODOO SERVER.md  DEVELOPMENT_PLAN.md  Dockerfile  EMPLOYEE_SELF_SERVICE.md  PROGRESS.md  README.md  package-lock.json  pyproject.toml  requirements.txt
.claude/skills/: README ODOO SERVER.md
.github/workflows/: automerge.yml  ci.yml  codeql.yml
config/: employee_mcp_config.json  oauth_config.example.json  odoo_config.example.json
docker/: Dockerfile  docker-compose.yml
docs/: CI_CD.md  CLAUDE_INTEGRATION.md  SECURITY.md
scripts/: run_e2e_tests.sh  run_inspector.sh  save_claude_auth.py
src/odoo_mcp_server/: __init__.py  config.py  http_server.py  server.py
src/odoo_mcp_server/oauth/: __init__.py  metadata.py  resource_server.py  token_validator.py  user_mapping.py
src/odoo_mcp_server/odoo/: __init__.py  client.py  exceptions.py
src/odoo_mcp_server/resources/: __init__.py
src/odoo_mcp_server/tools/: __init__.py  employee.py  records.py
tests/: __init__.py  conftest.py
tests/e2e/: E2E_QA_REPORT.md  README.md  __init__.py  conftest.py  scenarios.json  test_agent_sdk.py  test_browser_oauth.py  test_claude_mcp_integration.py  test_employee_scenarios.py  test_oauth_flow.py  test_odoo_login_flow.py  test_user_journeys.py
tests/integration/: __init__.py  test_live_odoo.py  test_mcp_protocol.py  test_odoo_integration.py
tests/mcp/: __init__.py  test_mcp_protocol.py
tests/unit/: __init__.py  test_config.py  test_google_oauth_scopes.py  test_http_server.py  test_oauth.py  test_oauth_resource_server.py  test_odoo_client.py  test_tools.py
